--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -5,7 +5,7 @@
     <TITLE>SEM RESULT CALCULATOR</TITLE>
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <LINK rel="icon" TYPE="IMAGE" HREF="C:\Users\tally\Desktop\HTML\icon.png">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </HEAD>
 
