--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -5,7 +5,7 @@
     <TITLE>SEM RESULT CALCULATOR</TITLE>
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <LINK rel="icon" TYPE="IMAGE" HREF="C:\Users\tally\Desktop\HTML\icon.png">
-    <link rel="stylesheet" href="https://github.com/subhash1411/Projects/blob/main/style.css">
+    <link rel="stylesheet" href="https://github.com/subhash1411/Projects/blob/9b3683494ccc470642f2ceb3d0a4bfd2084a9d3b/style.csss">
 
 </HEAD>
 
