--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -51,11 +51,11 @@
         </div>
         <div class="columns">
                 <p id="hp"><B><I>BCA</I></B></p>
-                <a href="https://github.com/subhash1411/Projects/tree/4812ec0fa4b09b4aa567a126b444d4179637612e/BCA/bca_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="https://github.com/subhash1411/Projects/tree/4812ec0fa4b09b4aa567a126b444d4179637612e/BCA/bca_2nd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="https://github.com/subhash1411/Projects/tree/4812ec0fa4b09b4aa567a126b444d4179637612e/BCA/bca_3rd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="https://github.com/subhash1411/Projects/tree/4812ec0fa4b09b4aa567a126b444d4179637612e/BCA/bca_4th_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
-                <a href="https://github.com/subhash1411/Projects/tree/4812ec0fa4b09b4aa567a126b444d4179637612e/BCA/bca_5th_sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BCA/bca_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BCA/bca_2nd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BCA/bca_3rd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/BCA/bca_4th_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/BCA/bca_5th_sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
         </div>
         <div class="columns">
                 <p id="hp"><B><I>B Com</I></B></p>
