--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -5,7 +5,7 @@
     <TITLE>SEM RESULT CALCULATOR</TITLE>
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <LINK rel="icon" TYPE="IMAGE" HREF="C:\Users\tally\Desktop\HTML\icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
 </HEAD>
 
@@ -43,11 +43,11 @@
     <div class="row">
         <div class="columns" >
                 <p id="hp"><B><I>BSC</I></B></p>
-                <a href="1st Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM </BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_2nd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_3rd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_4th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_5th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
         </div>
         <div class="columns">
                 <p id="hp"><B><I>BCA</I></B></p>
