--- a/BCA/bca_1st_Sem.html
+++ b/BCA/bca_1st_Sem.html
@@ -3,8 +3,8 @@
     <HEAD>
         <title>BCA SEM-I</title>
         <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
-        <script src="/BCA/bca_script.js"></script>
-        <link rel="stylesheet" href="/style.css">
+        <script src="/Projects/BCA/bca_script.js"></script>
+        <link rel="stylesheet" href="/Projects/style.css">
 
     </HEAD>
 
@@ -31,20 +31,20 @@
             </div>
 
             <div class="Page_neck_right">
-                <a href="Result Cal.html" ><b id="page_bar">About Me</b></a>
-                <a href="Login.html" target="_top"><b id="page_bar">Login</b></a>
-                <a href="Result Cal.html" ><b id="page_bar">Sign Up</b></a>
+                <a href="/Projects/Result Cal.html" ><b id="page_bar">About Me</b></a>
+                <a href="/Projects/Login.html" target="_top"><b id="page_bar">Login</b></a>
+                <a href="/Projects/Result Cal.html" ><b id="page_bar">Sign Up</b></a>
             </div>        
     
         </div>
     
         <H1 align="CENTER" id="clr"><B>BCA I<sup>st</sup> Semister Subjects</B></H1>
 
-        <FORM name="FSEM" id="subjects" method="put" action="" onsubmit="Bcasem1()">
+        <FORM name="FORM" id="subjects" method="put" action="" onsubmit="Bcasem1()">
             <H2 id="clr">Select the Grades to Subjects :</H2>
         <OL>
             <LI>
-                <H3 id="clr">ENGLISH :  <select name="ENG" id="slt" size="1" required>
+                <H3 id="clr">English :  <select name="ENG" id="slt" size="1" required>
                     <option value=10>O</option>
                     <option value=9>A+</option>
                     <option value=8>A</option>
@@ -57,7 +57,7 @@
             </LI>
 
             <LI>
-                <H3 id="clr">TELUGU : <select name="TLG" id="slt" size="1" required>
+                <H3 id="clr">Telugu : <select name="TLG" id="slt" size="1" required>
                     <option value=10>O</option>
                     <option value=9>A+</option>
                     <option value=8>A</option>
@@ -70,7 +70,7 @@
             </LI>
 
             <LI>
-                <H3 id="clr">ELECTRONIC APPLICATIONS :  <select NAME="EA" id="slt" size="1" required>
+                <H3 id="clr">Electronic Applications :  <select NAME="EA" id="slt" size="1" required>
                     <option value=10>O</option>
                     <option value=9>A+</option>
                     <option value=8>A</option>
@@ -83,7 +83,7 @@
             </LI>
 
             <LI>
-                <H3 id="clr">ENTERPRENEURSHIP : <select NAME="ES" id="slt" size="1" required>
+                <H3 id="clr">Enterpreneurship : <select NAME="ES" id="slt" size="1" required>
                     <option value=10>O</option>
                     <option value=9>A+</option>
                     <option value=8>A</option>
