--- a/BCA/bca_3rd_Sem.html
+++ b/BCA/bca_3rd_Sem.html
@@ -5,8 +5,8 @@
         <title>BCA SEM-III</title>
         <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
         
-        <script src="/BCA/bca_script.js"></script>
-        <link rel="stylesheet" href="/style.css">
+        <script src="/Projects/BCA/bca_script.js"></script>
+        <link rel="stylesheet" href="/Projects/style.css">
 
     </HEAD>
 
@@ -26,23 +26,23 @@
         <div class="Page_neck">
 
             <div class="Page_neck_left">
-                <a href="/Result_Cal.html" ><b id="page_bar">HOME</b></a>
+                <a href="/Projects/Result_Cal.html" ><b id="page_bar">HOME</b></a>
                 <!--in this link we create aknu results links page-->
                 <a href="https://www.aknu.edu.in/Exams/results.php" target="_blank"><b id="page_bar">AKNU Results</b></a>
                 <a href="Default.html"><b id="page_bar">DEFAULT</b></a>
             </div>
 
             <div class="Page_neck_right">
-                <a href="Result Cal.html" ><b id="page_bar">About Me</b></a>
-                <a href="Login.html" target="_top"><b id="page_bar">Login</b></a>
-                <a href="Result Cal.html" ><b id="page_bar">Sign Up</b></a>
+                <a href="/Projects/Result Cal.html" ><b id="page_bar">About Me</b></a>
+                <a href="/Projects/Login.html" target="_top"><b id="page_bar">Login</b></a>
+                <a href="/Projects/Result Cal.html" ><b id="page_bar">Sign Up</b></a>
             </div>
    
         </div>
     
         <H1 align="CENTER" id="clr"><B>BCA III<sup>rd</sup> Semister Subjects</B></H1>
 
-        <FORM name="FSEM" id="subjects" method="put" action="" onsubmit="Bcasem3()">
+        <FORM name="FORM" id="subjects" method="put" action="" onsubmit="Bcasem3()">
             <H2 id="clr">Select the Grades to Subjects :</H2>
         <OL>
             <LI>
