--- a/BCA/bca_1st_Sem.html
+++ b/BCA/bca_1st_Sem.html
@@ -24,7 +24,7 @@
         <div class="Page_neck">
 
             <div class="Page_neck_left">
-                <a href="/Result_Cal.html" ><b id="page_bar">HOME</b></a>
+                <a href="/Projects/Result_Cal.html" ><b id="page_bar">HOME</b></a>
                 <!--in this link we create aknu results links page-->
                 <a href="https://www.aknu.edu.in/Exams/results.php" target="_blank"><b id="page_bar">AKNU Results</b></a>
                 <a href="Default.html"><b id="page_bar">DEFAULT</b></a>
