--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -5,7 +5,7 @@
     <TITLE>SEM RESULT CALCULATOR</TITLE>
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <LINK rel="icon" TYPE="IMAGE" HREF="C:\Users\tally\Desktop\HTML\icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Projects/style.css">
 
 </HEAD>
 
@@ -24,16 +24,16 @@
     <div class="Page_neck">
 
         <div class="Page_neck_left">
-            <a href="/Result_Cal.html" ><b id="page_bar">HOME</b></a>
+            <a href="/Projects/Result_Cal.html" ><b id="page_bar">HOME</b></a>
             <!--in this link we create aknu results links page-->
             <a href="https://www.aknu.edu.in/Exams/results.php" target="_blank"><b id="page_bar">AKNU Results</b></a>
             <a href="Default.html"><b id="page_bar">DEFAULT</b></a>
         </div>
 
         <div class="Page_neck_right">
-            <a href="Result Cal.html" ><b id="page_bar">About Me</b></a>
-            <a href="Login.html" target="_top"><b id="page_bar">Login</b></a>
-            <a href="Result Cal.html" ><b id="page_bar">Sign Up</b></a>
+            <a href="/Projects/Result_Cal.html" ><b id="page_bar">About Me</b></a>
+            <a href="/Projects/Login.html" target="_top"><b id="page_bar">Login</b></a>
+            <a href="/Projects/Result_Cal.html" ><b id="page_bar">Sign Up</b></a>
         </div>    
  
     </div>
@@ -43,19 +43,19 @@
     <div class="row">
         <div class="columns" >
                 <p id="hp"><B><I>BSC</I></B></p>
-                <a href="/Projects/BSC/bsc_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/Projects/BSC/bsc_2nd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/Projects/BSC/bsc_3rd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="/Projects/BSC/bsc_4th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/Projects/BSC/bsc_5th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_2nd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_3rd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_4th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BSC/bsc_5th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
         </div>
         <div class="columns">
                 <p id="hp"><B><I>BCA</I></B></p>
-                <a href="/Projects/BCA/bca_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/Projects/BCA/bca_2nd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/Projects/BCA/bca_3rd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="/Projects/BCA/bca_4th_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
-                <a href="/Projects/BCA/bca_5th_sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BCA/bca_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BCA/bca_2nd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/BCA/bca_3rd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/BCA/bca_4th_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/BCA/bca_5th_sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
         </div>
         <div class="columns">
                 <p id="hp"><B><I>B Com</I></B></p>
