--- a/BCA/bca_1st_Sem.html
+++ b/BCA/bca_1st_Sem.html
@@ -24,16 +24,16 @@
         <div class="Page_neck">
 
             <div class="Page_neck_left">
-                <a href="/Projects/Result_Cal.html" ><b id="page_bar">HOME</b></a>
+                <a href="/Result_Cal.html" ><b id="page_bar">HOME</b></a>
                 <!--in this link we create aknu results links page-->
                 <a href="https://www.aknu.edu.in/Exams/results.php" target="_blank"><b id="page_bar">AKNU Results</b></a>
                 <a href="Default.html"><b id="page_bar">DEFAULT</b></a>
             </div>
 
             <div class="Page_neck_right">
-                <a href="/Projects/Result Cal.html" ><b id="page_bar">About Me</b></a>
+                <a href="/Projects/Result_Cal.html" ><b id="page_bar">About Me</b></a>
                 <a href="/Projects/Login.html" target="_top"><b id="page_bar">Login</b></a>
-                <a href="/Projects/Result Cal.html" ><b id="page_bar">Sign Up</b></a>
+                <a href="/Projects/Result_Cal.html" ><b id="page_bar">Sign Up</b></a>
             </div>        
     
         </div>
