--- a/BCA/bca_4th_Sem.html
+++ b/BCA/bca_4th_Sem.html
@@ -32,9 +32,9 @@
             </div>
 
             <div class="Page_neck_right">
-                <a href="/Projects/Result Cal.html" ><b id="page_bar">About Me</b></a>
+                <a href="/Projects/Result_Cal.html" ><b id="page_bar">About Me</b></a>
                 <a href="/Projects/Login.html" target="_top"><b id="page_bar">Login</b></a>
-                <a href="/Projects/Result Cal.html" ><b id="page_bar">Sign Up</b></a>
+                <a href="/Projects/Result_Cal.html" ><b id="page_bar">Sign Up</b></a>
             </div>
    
         </div>
