--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -43,19 +43,19 @@
     <div class="row">
         <div class="columns" >
                 <p id="hp"><B><I>BSC</I></B></p>
-                <a href="/BSC/bsc_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/BSC/bsc_2nd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/BSC/bsc_3rd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="/BSC/bsc_4th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/BSC/bsc_5th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BSC/bsc_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BSC/bsc_2nd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BSC/bsc_3rd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BSC/bsc_4th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BSC/bsc_5th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
         </div>
         <div class="columns">
                 <p id="hp"><B><I>BCA</I></B></p>
-                <a href="/BCA/bca_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/BCA/bca_2nd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="/BCA/bca_3rd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="/BCA/bca_4th_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
-                <a href="/BCA/bca_5th_sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BCA/bca_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BCA/bca_2nd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BCA/bca_3rd_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BCA/bca_4th_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BCA/bca_5th_sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
         </div>
         <div class="columns">
                 <p id="hp"><B><I>B Com</I></B></p>
