--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
     <TITLE>SEM RESULT CALCULATOR</TITLE>
-    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <LINK rel="icon" TYPE="IMAGE" HREF="C:\Users\tally\Desktop\HTML\icon.png">
     <link rel="stylesheet" href="/Projects/style.css">
 
