--- a/Result_Cal.html
+++ b/Result_Cal.html
@@ -5,7 +5,7 @@
     <TITLE>SEM RESULT CALCULATOR</TITLE>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <LINK rel="icon" TYPE="IMAGE" HREF="C:\Users\tally\Desktop\HTML\icon.png">
-    <link rel="stylesheet" href="/Projects/style.css">
+    <link rel="stylesheet" href="Projects/style.css">
 
 </HEAD>
 
@@ -32,13 +32,22 @@
 
         <div class="Page_neck_right">
             <a href="/Projects/Result_Cal.html" ><b id="page_bar">About Me</b></a>
-            <a href="/Projects/Login.html" target="_top"><b id="page_bar">Login</b></a>
-            <a href="/Projects/Result_Cal.html" ><b id="page_bar">Sign Up</b></a>
+            <a href="#">
+            <b id="page_bar">Syllbasus
+                <ul>
+                    <li>BSC</li>
+                    <li>BCA</li>
+                    <li>BCOM</li>
+                    <li>BBA</li>
+                </ul>
+            </b>
+            </a>
+        
         </div>    
  
     </div>
 
-    <H1 align="Center" style="color: black;"><B>Select the Group and Semister :</B></H1>
+    <H1 align="Center" style = "color: black;"><B>Select the Group and Semister :</B></H1>
 
     <div class="row">
         <div class="columns" >
@@ -58,20 +67,20 @@
                 <a href="/Projects/BCA/bca_5th_sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM </BUTTON></a><BR><BR>
         </div>
         <div class="columns">
-                <p id="hp"><B><I>B Com</I></B></p>
-                <a href="1st Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM</BUTTON></a><BR><BR>
+                <p id="hp"><B><I>BCOM(COM)</I></B></p>
+                <a href="/Projects/BCOM/bcom_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BCOM/bcom_2nd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BCOM/bcom_3rd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BCOM/bcom_4th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BCOM/bcom_5th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM</BUTTON></a><BR><BR>
         </div>
         <div class="columns">
                 <p id="hp"><B><i>BBA</i></B></p>
-                <a href="1st Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
-                <a href="1stsem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BBA/bba_1st_Sem.html" target="_top"><BUTTON TYPE="BUTTON" class="button">I<sup>st</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BBA/bba_2nd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">II<sup>nd</sup> SEM </BUTTON></a><BR><BR>
+                <a href="/Projects/BBA/bba_3rd_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">III<sup>rd</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BBA/bba_4th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">IV<sup>th</sup> SEM</BUTTON></a><BR><BR>
+                <a href="/Projects/BBA/bba_5th_Sem.html" target="_blank"><BUTTON TYPE="BUTTON" class="button">V<sup>th</sup> SEM</BUTTON></a><BR><BR>
 
         </div>
     </div>      
