--- a/BBA/bba_4th_Sem.html
+++ b/BBA/bba_4th_Sem.html
@@ -1,6 +1,6 @@
 <HTML>
     <HEAD>
-        <title>BCA SEM-I</title>
+        <title>BBA SEM-IV</title>
         <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
         <link rel="stylesheet" href="/Projects/style.css">
 
